Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-0.4
-
None
Description
When using pn_messenger_recv( -1 ), remote senders are not back-pressured, and the number of messages received can grow without bounds. It appears that messenger is unconditionally granting credit as messages arrive.
Messenger should instead only replenish credit when received messages are actually consumed by the application (maybe after they are settled?).