Bounded messenger's credit allocation when an unlimited value is passed to recv; added tests for pushback at both messenger and engine level; fixed proton-j engine to respect credit window; fixed java messenger to properly report if work has been done. This addresses PROTON-350 and PROTON-351.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1504407 13f79535-47bb-0310-9956-ffa450edef68